feat: Add email OTP verification for registration and enhance security
- Implemented two-step registration with email OTP verification
  - Users receive OTP via email before account creation
  - Account is only created after successful OTP verification
- Enhanced security features:
  - Added input sanitization for XSS prevention
  - Improved phone number validation (10 digits, duplicate checking)
  - Added suspended provider account blocking
  - Enhanced CORS and Helmet security headers
  - Improved message and review text sanitization
- Removed phone OTP, using email OTP only for registration
- Updated file storage to use local storage with S3 fallback
- Fixed React accessibility warnings (DialogTitle, DialogDescription)
- Improved error handling for 401/403/404 responses
- Updated documentation with OTP setup and security improvements
- Moved redundant S3 CORS documentation to archive

--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "test:watch": "jest --watch",
     "test:e2e": "jest --config jest.e2e.config.js",
     "lint": "eslint src --ext .ts",
-    "format": "prettier --write \"src/**/*.ts\""
+    "format": "prettier --write \"src/**/*.ts\"",
+    "setup-cors": "ts-node scripts/setup-s3-cors.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.7.0",
