--- a/package.json
+++ b/package.json
@@ -23,10 +23,7 @@
     "lint:frontend": "cd frontend && npm run lint",
     "lint:backend": "cd server && npm run lint",
     "start": "npm run start:backend",
-    "start:backend": "cd server && npm start",
-    "docker:up": "docker-compose -f docker-compose.dev.yml up -d",
-    "docker:down": "docker-compose -f docker-compose.dev.yml down",
-    "docker:logs": "docker-compose -f docker-compose.dev.yml logs -f"
+    "start:backend": "cd server && npm start"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
